# dns-sift

./: .gitignore  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configutils.py.in  contributors.txt  datapoints.csv  engine.conf.in  setup.py.in  start.py  start.py.in  start.sh  start.sh.in
autom4te.cache/: output.0  requests  traces.0  traces.1
config/: configutils.py.in  engine.conf.in  service_ports.lst.in  setup.py.in  start.py.in
data/: datapoints.csv  dnscat.csv  iodine.csv  normal.csv
src/: common_flow.c  config_parser.c  dns_features.c  dns_features.h  dns_parse.c  dns_parse.h  dns_policies.c  dns_policies.h  dns_printer.h  dns_verdict.c  dns_verdict.h  domain_utils.c  logger.h  poller.c  poller.h  routing.c  routing.h  test.c
src/classifier/: MANIFEST.in  Makefile  __init__.py  c_interface.c  classifier.py  classifier_C_interface.py  classifier_svm.py  daemon_module.c  pca.py
src/classifier/config/: cherrypy.conf  service.conf
src/classifier/data/: err.txt  eventsFri Sep 15 19:46:09 2017.ft  eventsFri Sep 15 19:54:34 2017.ft
src/classifier/data/dns_tunneling/: browsers.csv  dnscat.csv  iodine.csv  loader.py  namebench_alexa.csv  normal.csv
src/classifier/data/dns_tunneling/anomalous/: iodine.csv
src/classifier/data/dns_tunneling/legit/: alexa.csv  namebench_firefox.csv
src/classifier/data/dns_tunneling/normal/: browsers.csv
src/classifier/py/: classifier.py  classifierviz.py  cluster.py  clusterviz.py  dataloader.py  debug.py  eventmaptest.py  hcluster.py  main.py  procview.py  pynetstat.py  vectorutils.py  visjsadapter.py
src/classifier/src/: classifier.py  eventmap.py  events.py  fsevents.py  main.py  netevents.py  sigmajsadapter.py
src/classifier/test_data/dns_tunneling/: loader.py
src/classifier/test_data/masquerade/: loader.py
src/dns/: common_flow.c  config_parser.h  dns_features.c  dns_features.h  dns_features.sc  dns_flow_model.c  dns_flow_model.h  dns_parse.c  dns_policies.c  dns_printer.c  dns_verdict.c  dns_verdict.h  domain_utils.c  domain_utils.h  flow_features.cpp  flow_features.h  flow_processor.cpp  flow_track.cpp  flow_track.h  logger.h  poller.c  poller.h  qh_daemon.c  qh_daemon.h  routing.c  routing.h  test.c
src/gui/: interface.py  modelviz.py  test.py
test/: feature_perf_comparison.py  flow_test.c  flow_test.cpp  online_solvers_comparison.py  test-pybrain.py  test-sklearn.py
